--- a/test-shared/CMakeLists.txt
+++ b/test-shared/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_FLAGS "-std=c++14")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(qsqlcipher-test main.cpp)
 target_link_libraries(qsqlcipher-test Qt5::Sql)
